--- a/PyBer.ipynb
+++ b/PyBer.ipynb
@@ -625,180 +625,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>city</th>\n",
-       "      <th>date</th>\n",
-       "      <th>fare</th>\n",
-       "      <th>ride_id</th>\n",
-       "      <th>driver_count</th>\n",
-       "      <th>type</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2250</th>\n",
-       "      <td>Randallchester</td>\n",
-       "      <td>2019-04-13 11:13:31</td>\n",
-       "      <td>43.22</td>\n",
-       "      <td>1076079536213</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Rural</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2251</th>\n",
-       "      <td>North Holly</td>\n",
-       "      <td>2019-02-02 14:54:00</td>\n",
-       "      <td>12.42</td>\n",
-       "      <td>1985256326182</td>\n",
-       "      <td>8</td>\n",
-       "      <td>Rural</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2252</th>\n",
-       "      <td>Michaelberg</td>\n",
-       "      <td>2019-03-27 18:27:34</td>\n",
-       "      <td>54.85</td>\n",
-       "      <td>4421836952718</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Rural</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2253</th>\n",
-       "      <td>Lake Latoyabury</td>\n",
-       "      <td>2019-02-23 21:12:24</td>\n",
-       "      <td>47.90</td>\n",
-       "      <td>3269652929887</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Rural</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2254</th>\n",
-       "      <td>Lake Latoyabury</td>\n",
-       "      <td>2019-05-06 08:57:56</td>\n",
-       "      <td>51.80</td>\n",
-       "      <td>4018025271936</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Rural</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2370</th>\n",
-       "      <td>Michaelberg</td>\n",
-       "      <td>2019-04-29 17:04:39</td>\n",
-       "      <td>13.38</td>\n",
-       "      <td>8550365057598</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Rural</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2371</th>\n",
-       "      <td>Lake Latoyabury</td>\n",
-       "      <td>2019-01-30 00:05:47</td>\n",
-       "      <td>20.76</td>\n",
-       "      <td>9018727594352</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Rural</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2372</th>\n",
-       "      <td>North Jaime</td>\n",
-       "      <td>2019-02-10 21:03:50</td>\n",
-       "      <td>11.11</td>\n",
-       "      <td>2781339863778</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Rural</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2373</th>\n",
-       "      <td>West Heather</td>\n",
-       "      <td>2019-05-07 19:22:15</td>\n",
-       "      <td>44.94</td>\n",
-       "      <td>4256853490277</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Rural</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2374</th>\n",
-       "      <td>Newtonview</td>\n",
-       "      <td>2019-04-25 10:20:13</td>\n",
-       "      <td>55.84</td>\n",
-       "      <td>9990581345298</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Rural</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>125 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 city                 date   fare        ride_id  \\\n",
-       "2250   Randallchester  2019-04-13 11:13:31  43.22  1076079536213   \n",
-       "2251      North Holly  2019-02-02 14:54:00  12.42  1985256326182   \n",
-       "2252      Michaelberg  2019-03-27 18:27:34  54.85  4421836952718   \n",
-       "2253  Lake Latoyabury  2019-02-23 21:12:24  47.90  3269652929887   \n",
-       "2254  Lake Latoyabury  2019-05-06 08:57:56  51.80  4018025271936   \n",
-       "...               ...                  ...    ...            ...   \n",
-       "2370      Michaelberg  2019-04-29 17:04:39  13.38  8550365057598   \n",
-       "2371  Lake Latoyabury  2019-01-30 00:05:47  20.76  9018727594352   \n",
-       "2372      North Jaime  2019-02-10 21:03:50  11.11  2781339863778   \n",
-       "2373     West Heather  2019-05-07 19:22:15  44.94  4256853490277   \n",
-       "2374       Newtonview  2019-04-25 10:20:13  55.84  9990581345298   \n",
-       "\n",
-       "      driver_count   type  \n",
-       "2250             9  Rural  \n",
-       "2251             8  Rural  \n",
-       "2252             6  Rural  \n",
-       "2253             2  Rural  \n",
-       "2254             2  Rural  \n",
-       "...            ...    ...  \n",
-       "2370             6  Rural  \n",
-       "2371             2  Rural  \n",
-       "2372             1  Rural  \n",
-       "2373             4  Rural  \n",
-       "2374             1  Rural  \n",
-       "\n",
-       "[125 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "rural_cities_df"
+    "#rural_cities_df"
    ]
   },
   {
